--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
