--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-d3-graph": "^2.6.0",
+    "react-dom": "^19.0.0",
+    "react-flow": "^1.0.3",
+    "reactflow": "^11.11.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
