--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.482.0",
+    "marked": "^15.0.7",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-d3-graph": "^2.6.0",
